--- a/data/tasks.json
+++ b/data/tasks.json
@@ -39,6 +39,16 @@
       "date": "2025-12-01",
       "created_at": "2025-12-02T01:16:35.925681Z",
       "completed_at": null
+    },
+    {
+      "id": "48020d75-7f3d-4f3f-83e7-24e4fc79bda5",
+      "title": "Petition form by Peter (Gov2005)",
+      "urgency": 2,
+      "importance": 3,
+      "status": "Pending",
+      "date": "2025-12-01",
+      "created_at": "2025-12-02T02:54:44.676729Z",
+      "completed_at": null
     }
   ]
 }
