--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,12 @@
 name = "eq"
 version = "0.1.0"
 edition = "2021"
+description = "Terminal-based task manager using the Eisenhower Matrix method."
+license = "MIT"
+repository = "https://github.com/xiaolong-y/eq"
+keywords = ["cli", "tui", "productivity", "task-manager", "eisenhower"]
+categories = ["command-line-utilities"]
+readme = "README.md"
 
 [dependencies]
 ratatui = "0.28"
